# topic-lake

./: Makefile  alembic.ini  config.yaml  main.py  pyproject.toml
test_config/: docker-compose-tests.yaml
topic_lake_api/: config.py  constants.py
topic_lake_api/api/: dependencies.py  main.py
topic_lake_api/api/models/: connection.py  items.py  topics.py  users.py
topic_lake_api/api/routes/: connection.py  items.py  topics.py  users.py
topic_lake_api/api/tests/: base.py  conftest.py  decorators.py  test_connection.py  test_items.py  test_topics.py  test_users.py
topic_lake_api/api/utils/: app_utils.py  exception_utils.py  route_utils.py
topic_lake_api/app/controllers/: base.py
topic_lake_api/app/presenters/: connection.py  items.py  topics.py  users.py
topic_lake_api/domain/: constants.py  exceptions.py
topic_lake_api/domain/entities/: __init__.py  items.py  topics.py  users.py
topic_lake_api/domain/interfaces/: base.py
topic_lake_api/domain/utils/: encryption_utils.py  object_utils.py
topic_lake_api/domain/value_objects/: base.py
topic_lake_api/infra/db/: core.py  models.py
topic_lake_api/infra/repositories/: access_tokens.py  base.py  items.py  topics.py  users.py
topic_lake_api/infra/utils/: sqlalchemy_utils.py
topic_lake_api/interactor/: constants.py  exceptions.py
topic_lake_api/interactor/use_cases/: base.py
topic_lake_api/interactor/utils/: item_utils.py
topic_lake_api/use_cases/connection/: login.py  logout.py
topic_lake_api/use_cases/items/: create.py  delete.py  get.py  list.py  update.py
topic_lake_api/use_cases/topics/: create.py  delete.py  get.py  list.py  update.py
topic_lake_api/use_cases/users/: create.py  get.py
topic_lake_api/utils/: crypto_utils.py  object_utils.py
topic_recommendations/: config.py  exceptions.py
topic_recommendations/api/: dependencies.py  exceptions.py  main.py
topic_recommendations/app/: main_router.py
topic_recommendations/interactor/: constants.py  exceptions.py
topic_recommendations/utils/: crypto_utils.py  object_utils.py
(+145 files in other folders)
