[tool.poetry]
name = "topic-lake-api"
version = "0.1.0"
description = ""
authors = ["Valentin <valentin.foucher@free.fr>"]
readme = "README.md"
packages = [{include = "topic_lake_api"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.29"
frozendict = "^2.4.1"
pyyaml = "^6.0.1"
pyaml-env = "^1.2.1"
psycopg2-binary = "^2.9.9"
httpx = "^0.27.0"
asgi-lifespan = "^2.1.0"
pytest = "^8.1.1"
sqlalchemy-utils = "^0.41.2"
alembic = "^1.13.1"
pyjwt = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

